Source/WebKit2/UIProcess/mac/WKFullScreenWindowController.h
@@ -38,13 +38,14 @@ class IntRect;
 }
 
 @class WKView;
+@class WebCoreFullScreenPlaceholderView;
 @class WebWindowScaleAnimation;
 @class WebWindowFadeAnimation;
 
-@interface WKFullScreenWindowController : NSWindowController {
+@interface WKFullScreenWindowController : NSWindowController<NSWindowDelegate> {
 @private
     WKView *_webView;
-    RetainPtr<NSImageView> _webViewPlaceholder;
+    RetainPtr<WebCoreFullScreenPlaceholderView> _webViewPlaceholder;
     RetainPtr<WebWindowScaleAnimation> _scaleAnimation;
     RetainPtr<WebWindowFadeAnimation> _fadeAnimation;
     RetainPtr<NSWindow> _backgroundWindow;
